--- a/src/main/resources/application-githubaction.properties
+++ b/src/main/resources/application-githubaction.properties
@@ -2,7 +2,7 @@
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1/test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=3
