--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '8'
-      - name: Run Gradle
+      - name: Run tests
         run: ./gradlew test
   build_and_push_docker_to_registry:
     name: Push Docker image to Registry
